# rishat-test-task

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
items/: admin.py  forms.py  models.py  services.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_item_currency.py
items/templates/items/: _base.html  concrete.html
nginx/: nginx.conf
orders/: admin.py  forms.py  models.py  schemas.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_tax_order_taxes.py  0003_tax_stripe_id.py  0004_discount_alter_tax_description_order_discounts.py  0005_alter_order_discounts_alter_order_taxes.py  0006_alter_discount_percent_off_alter_order_discounts_and_more.py
orders/templates/orders/: concrete.html
payment/: services.py  urls.py  views.py
test_task/: config.py  settings.py  urls.py
